--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>DevOpsPortal</title>
+    <title>DevOpsPortal UX</title>
     <base href="/DemoPortal/">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
